...
            enableLoveButton(false)
            return
        }
    }
    
    @IBAction func loveButtonPressed(_ button: UIButton) {
        loveProgressText = "❤️"
    }
    
    @IBAction func reset(_ button: UIButton) {
        
        //Perform domain operation
        isItLoveYet.resetProgress()
...
